force-app/main/default/objects/Quality_Search_Audit__c/Quality_Search_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit trail for Quality Search lookups. OWD Private; only the Quality_Search_Auditor permission set grants read access. Stores which identifier types were used, not their values.</description>
    <label>Quality Search Audit</label>
    <nameField>
        <displayFormat>QSA-{0000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Search Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>