force-app/main/default/objects/Quality_Search_Audit__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <description>DeveloperName of the Quality_Search_Config__mdt used for this search. Lets auditors slice the trail by configuration (e.g. agent vs. fraud-reviewer setup).</description>
    <label>Config Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>