force-app/main/default/objects/Quality_Search_Audit__c/fields/Filters_Used__c.field-meta.xml
<CustomField>
    <fullName>Filters_Used__c</fullName>
    <description>Concatenated list of optional filter types narrowing the search (e.g. LastName+City). Filter VALUES are never stored. Empty when no filters were added.</description>
    <label>Filters Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>