force-app/main/default/objects/Quality_Search_Audit__c/fields/Matched_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Ids__c</fullName>
    <description>Comma-separated list of Contact or Account Ids returned to the user. Empty when tooManyResults.</description>
    <label>Matched Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>