force-app/main/default/objects/Quality_Search_Audit__c/fields/Parameters_Used__c.field-meta.xml
<CustomField>
    <fullName>Parameters_Used__c</fullName>
    <description>Concatenated list of identifier types used in the search (e.g. Email+Birthdate). Identifier VALUES are never stored.</description>
    <label>Parameters Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>