force-app/main/default/objects/Quality_Search_Audit__c/fields/Result_Count__c.field-meta.xml
<CustomField>
    <fullName>Result_Count__c</fullName>
    <description>Number of records returned by the privileged finder before FLS stripping.</description>
    <label>Result Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>