force-app/main/default/objects/Quality_Search_Audit__c/fields/Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Search_Type__c</fullName>
    <description>Which result tracks matched: Contact (B2B), PersonAccount (B2C), Combined (both), or None.</description>
    <label>Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>PersonAccount</fullName>
            </value>
            <value>
                <fullName>Combined</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>